--- a/GoWorks/src/handitem/ms_project/docker-compose.yaml
+++ b/GoWorks/src/handitem/ms_project/docker-compose.yaml
@@ -5,11 +5,11 @@ services:
     image: mysql:${MYSQL_VERSION}
     restart: always
     ports:
-      - 3306:3306
+      - 3309:3306
     environment:
       TZ: Asia/Shanghai
-      MYSQL_ROOT_PASSWORD: 12345678
-      MYSQL_DATABASE: db
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: msproject
     volumes:
       - ${MYSQL_DIR}/data:/var/lib/mysql
       - ${MYSQL_DIR}/conf:/etc/mysql/conf.d/
@@ -30,18 +30,18 @@ services:
     ports:
       - ${REDIS_PORT}:6379
     command: redis-server /etc/redis/redis.conf
-#  Etcd:
-#    container_name: etcd3
-#    image: bitnami/etcd:${ETCD_VERSION}
-#    deploy:
-#      replicas: 1
-#      restart_policy:
-#        condition: on-failure
-#    environment:
-#      - ALLOW_NONE_AUTHENTICATION=yes
-#    privileged: true
-#    volumes:
-#      - ${ETCD_DIR}/data:/bitnami/etcd/data
-#    ports:
-#      - ${ETCD_PORT}:2379
-#      - 2380:2380
+  Etcd:
+    container_name: etcd3
+    image: bitnami/etcd:${ETCD_VERSION}
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+    privileged: true
+    volumes:
+      - ${ETCD_DIR}/data:/bitnami/etcd/data
+    ports:
+      - ${ETCD_PORT}:2379
+      - 2380:2380
