--- a/GoWorks/src/handitem/ms_project/project-user/dockerfile
+++ b/GoWorks/src/handitem/ms_project/project-user/dockerfile
@@ -1,7 +1,7 @@
 FROM alpine
 WORKDIR /Initial
 COPY ./target/project-user .
-COPY ./config/app-docker.yaml .
-RUN  mkdir config && mv app-docker.yaml config/app.yaml
+COPY ./config/app.yaml .
+RUN  mkdir config && mv app.yaml config/app.yaml
 EXPOSE 8080 8881
 ENTRYPOINT ["./project-user"]
